samples/_failures_safe/1761367091_b7ec67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c475d1a.c: In function ‘main’:
./samples/SAFE/__tmp_1c475d1a.c:140:5: error: expected declaration or statement at end of input
  140 |     size_t rows1, cols1, rows2, cols2;
      |     ^~~~~~
